changed swagger hosts
